# Openpyxl_Tkinter

./: README.md  pyproject.toml  synthesized_company_data.xlsx
.github/workflows/: ci.yml
tests/: __init__.py  test_excel_processor.py
xlsx_reader/: __init__.py  excel_processor.py  gui.py  main.py
